2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>

	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir

2008-04-28  Brian Gough  <bjg@network-theory.co.uk>

	* bidiag.c (gsl_linalg_bidiag_unpack, gsl_linalg_bidiag_unpack2):
	use new descending loop convention

	* hermtd.c (gsl_linalg_hermtd_unpack): use new descending loop
	convention

	* hh.c (gsl_linalg_HH_svx): use new descending loop convention

	* lq.c (gsl_linalg_LQ_vecQ, gsl_linalg_LQ_unpack): use new
	descending loop convention

	* qr.c (gsl_linalg_QR_Qvec, gsl_linalg_QR_unpack): use new
	descending loop convention

	* svd.c (gsl_linalg_SV_decomp_mod): use new descending loop
	convention

	* svdstep.c (chase_out_trailing_zero): use new descending loop
	convention

	* symmtd.c (gsl_linalg_symmtd_unpack): use new descending loop
	convention

2008-04-03  Brian Gough  <bjg@network-theory.co.uk>

	* qr.c lq.c: removed unused definition of REAL

2007-08-27  Brian Gough  <bjg@network-theory.co.uk>

	* tridiag.c: use GSL_ERROR for failed allocation, signal
	 GSL_EZERODIV if matrix is not positive definite

2007-08-17  Brian Gough  <bjg@network-theory.co.uk>

	* svd.c (gsl_linalg_SV_decomp): bail out if number of iterations
	exceeds 100*N

2007-08-16  Brian Gough  <bjg@network-theory.co.uk>

	* test.c (main): add some svd tests with small values that will
	cause underflow in intermediate steps of SVD iteration

2006-08-14  Brian Gough  <bjg@network-theory.co.uk>

	* balancemat.c: balance a general matrix D^-1 A D for rows and
	columns

2006-04-24  Brian Gough  <bjg@network-theory.co.uk>

	* svdstep.c apply_givens.c householder.c: perform linear
	operations with level-1 blas when compiled with USE_BLAS.
	
2006-02-10  Brian Gough  <bjg@network-theory.co.uk>

	* cholesky.c (quiet_sqrt): added a quiet_sqrt to allow checking
	for positive definiteness without a runtime error

2005-08-22  Brian Gough  <bjg@network-theory.co.uk>

	* svd.c (gsl_linalg_SV_decomp_jacobi): reorganised convergence