@@ -1,3 +1,10 @@
+2008-08-26  Brian Gough  <bjg@network-theory.co.uk>
+
+	* test.c (test_QRPT_update_dim): added tests for
+	gsl_linalg_QRPT_update
+
+	* qrpt.c (gsl_linalg_QRPT_update): handle rectangular matrices
+
 2008-07-03  Brian Gough  <bjg@hp2.network-theory.co.uk>
 
 	* Makefile.am (INCLUDES): use top_srcdir instead of top_builddir
